0027737: Remove hardcoded paths to data folders in mfc samples

Data shapes (used in samples) were moved into CSF_OCCTDataPath location.